acomodando html dom error

--- a/index.html
+++ b/index.html
@@ -883,8 +883,8 @@ document.getElementById('SignupPost').addEventListener('click', copiarAlPortapap
 
 document.getElementById('ImagenGetDefault').addEventListener('click', copiarAlPortapapeles);
 document.getElementById('ImagenGetNone').addEventListener('click', copiarAlPortapapeles);
-document.getElementById('ImagenPathID').addEventListener('click', copiarAlPortapapeles);
-document.getElementById('ImagenDelete').addEventListener('click', copiarAlPortapapeles);
+/* document.getElementById('ImagenPathID').addEventListener('click', copiarAlPortapapeles);
+document.getElementById('ImagenDelete').addEventListener('click', copiarAlPortapapeles); */
 
 document.getElementById('ExamGet').addEventListener('click', copiarAlPortapapeles);
 document.getElementById('ExamGetID').addEventListener('click', copiarAlPortapapeles);
