--- a/index_dev.html
+++ b/index_dev.html
@@ -786,7 +786,7 @@
                 <li > 
                     <h2 class="negrita">
                       <span class="listo">GET :</span>
-                      Devuelve todos los Estados
+                      Devuelve todos los Estados disponible para las ordenes
                     </h2>
                     <p><span class="negrita">EndPoint : </span>http://localhost:1234/states</p>
                     <button id="StateGet" class="btn">Copiar</button>
@@ -796,7 +796,7 @@
                 <li > 
                   <h2 class="negrita">
                     <span class="listo">GET :</span>
-                    Devuelve Factura por ID
+                    Devuelve Estado de orden por ID
                   </h2>
                   <p><span class="negrita">EndPoint : </span>http://localhost:1234/states/:id</p>
                   <button id="StateGetID" class="btn">Copiar</button>
@@ -806,7 +806,7 @@
               <li > 
                 <h2 class="negrita">
                   <span class="listo">POST :</span>
-                  Devuelve Factura por ID
+                  Crea Estado de la orden
                 </h2>
                 <p><span class="negrita">EndPoint : </span>http://localhost:1234/invoices</p>
                 <button id="StatePost" class="btn">Copiar</button>
@@ -816,7 +816,7 @@
             <li > 
               <h2 class="negrita">
                 <span class="listo">PATH :</span>
-                Devuelve Factura por ID
+                Actualiza Estado de la orden
               </h2>
               <p><span class="negrita">EndPoint : </span>http://localhost:1234/states/:id</p>
               <button id="StatePathID" class="btn">Copiar</button>
@@ -826,7 +826,7 @@
             <li > 
               <h2 class="negrita">
                 <span class="listo">DELETE :</span>
-                Elimina Estado por ID
+                Elimina Estado por ID de la orden
               </h2>
               <p><span class="negrita">EndPoint : </span>http://localhost:1234/states/:id</p>
               <button id="StateDeleteID" class="btn">Copiar</button>
@@ -835,7 +835,6 @@
              </li>
               </ul>
             </details>
-
     </article>
   </section>
 
